# gha-conan-setup-validate

./: conanfile.py  configure.ac
.github/workflows/: validate.yml
src/: Makefile.am  foobar.cpp  foobar.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
